# wm

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: AddWM.cmake  generate_modules.cmake
cmake/nkutils/: CMakeLists.txt
include/: AppInfoLoader.h  AppSwitcher.h  AppSwitcherPassElement.h  Globals.h  Hyprland.h  Image.h  Logging.h  WindowManager.h  WindowSwitcher.h  nkutils.h
include/AppSwitcher/: AppInfoLoader.h  AppSwitcher.h
include/Support/: Logging.h  Utils.h
include/WindowManager/: WindowManager.h
include/WindowSwitcher/: WindowSwitcher.h
include/hyprland/: config.h  debug.h  desktop.h  devices.h  event.h  globals.h  helpers.h  layout.h  managers.h  plugins.h  protocols.h  render.h  xwayland.h
include/hyprutils/: math.h
include/llvm/ADT/: DenseMapInfo.h  SmallVector.h
include/llvm/Support/: MemAlloc.h
lib/: CMakeLists.txt
lib/ADT/: CMakeLists.txt  SmallVector.cpp
lib/AppInfoLoader/: AppInfoLoader.cpp  CMakeLists.txt  Image.cpp  Xdg.cpp
lib/AppSwitcher/: AppInfoLoader.cpp  AppSwitcher.cpp  AppSwitcherPassElement.cpp  CMakeLists.txt  Image.cpp
lib/Support/: AppInfoLoader.cpp  CMakeLists.txt  Image.cpp  StringPool.cpp  Utils.cpp
lib/WindowManager/: CMakeLists.txt  WindowManager.cpp
lib/WindowSwitcher/: CMakeLists.txt  WindowSwitcher.cpp
lib/llvm/: CMakeLists.txt  SmallVector.cpp
modules/: wm.ixx
modules/AppSwitcher/: AppInfoLoader.ixx  AppSwitcher.ixx
modules/Support/: AppInfoLoader.ixx  Image.ixx  Logging.ixx  Support.ixx  Utils.ixx
modules/WindowManager/: WindowManager.ixx
modules/WindowSwitcher/: WindowSwitcher.ixx
modules/llvm/: ADT.ixx
modules/wm/AppInfoLoader/: AppInfoLoader.ixx  Image.ixx  Xdg.ixx
modules/wm/AppSwitcher/: AppInfoLoader.ixx  AppSwitcher.ixx  Image.ixx
modules/wm/Support/: ComptimeString.ixx  Logging.ixx  StringPool.ixx  Support.ixx  Utils.ixx
modules/wm/WindowManager/: WindowManager.ixx
modules/wm/WindowSwitcher/: WindowSwitcher.ixx
plugin/: CMakeLists.txt  Dispatchers.cpp  Dispatchers.ixx  Globals.ixx  Hooks.cpp  Hooks.ixx  Listeners.cpp  Listeners.ixx  lib.cpp  wm.cpp
scripts/: dummy_app.py
src/: AppInfoLoader.cpp  AppSwitcher.cpp  AppSwitcherPassElement.cpp  CMakeLists.txt  Hyprland.cpp  Image.cpp  WindowManager.cpp  WindowSwitcher.cpp  lib.cpp
test/: CMakeLists.txt  test_stuff.cpp
tests/: AppInfo.cpp  CMakeLists.txt  DesktopFileRead.cpp  XdgAppDirs.cpp
